--- a/admin-register.html
+++ b/admin-register.html
@@ -1,42 +1,157 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SAFETY DEPOSIT DRAWER | Register Admin</title>
 
-<title>Register Admin</title>
-
-<link rel="stylesheet" href="style.css">
+<!-- Supabase -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<style>
+* {
+  box-sizing: border-box;
+  font-family: "Segoe UI", sans-serif;
+}
+
+body {
+  min-height: 100vh;
+  margin: 0;
+  background:
+    linear-gradient(
+      135deg,
+      rgba(15, 32, 39, 0.9),
+      rgba(32, 58, 67, 0.9),
+      rgba(44, 83, 100, 0.9)
+    ),
+    url("https://images.unsplash.com/photo-1526378722484-cc5c51092d5b");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 360px;
+  padding: 35px;
+  border-radius: 18px;
+
+  /* GLASS EFFECT */
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 10px 40px rgba(0,0,0,0.4);
+
+  color: #fff;
+  text-align: center;
+}
+
+h2 {
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+
+.input-group {
+  text-align: left;
+  margin-bottom: 15px;
+}
+
+label {
+  font-size: 0.85rem;
+  color: rgba(255,255,255,0.8);
+}
+
+input {
+  width: 100%;
+  padding: 11px;
+  margin-top: 5px;
+  border-radius: 10px;
+  background: rgba(255,255,255,0.15);
+  border: 1px solid rgba(255,255,255,0.35);
+  color: #fff;
+  outline: none;
+}
+
+input::placeholder {
+  color: rgba(255,255,255,0.6);
+}
+
+button {
+  width: 100%;
+  padding: 12px;
+  margin-top: 15px;
+  border-radius: 10px;
+  border: none;
+  background: rgba(255,255,255,0.3);
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+button:hover {
+  background: rgba(255,255,255,0.45);
+}
+
+.link {
+  display: block;
+  margin-top: 15px;
+  font-size: 0.85rem;
+  color: rgba(255,255,255,0.8);
+  text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
+</style>
 </head>
+
 <body>
 
 <div class="container">
   <h2>Create Admin</h2>
 
-  <input id="full_name" placeholder="Full Name">
-  <input id="username" placeholder="Username">
-  <input id="password" type="password" placeholder="Password">
+  <div class="input-group">
+    <label>Full Name</label>
+    <input id="full_name" placeholder="Enter full name">
+  </div>
+
+  <div class="input-group">
+    <label>Username</label>
+    <input id="username" placeholder="Create username">
+  </div>
+
+  <div class="input-group">
+    <label>Password</label>
+    <input id="password" type="password" placeholder="Create password">
+  </div>
 
   <button id="registerBtn">Register</button>
+
   <a class="link" href="login.html">⬅ Back to Login</a>
 </div>
 
 <script>
+/* ===== SUPABASE CONFIG ===== */
 const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
-const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpaWZsa2FrZWFvcmdsdnF5anh4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk1NzMxMTcsImV4cCI6MjA4NTE0OTExN30.jWvGfrYhLtXgTKPlLod_TmdavoIAKudeQZ2AT42pVE8";
-
+const SUPABASE_KEY = "PASTE_YOUR_ANON_PUBLIC_KEY_HERE";
 
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
+/* ===== PASSWORD HASH ===== */
 async function hashPassword(password) {
   const enc = new TextEncoder();
   const hash = await crypto.subtle.digest("SHA-256", enc.encode(password));
   return Array.from(new Uint8Array(hash))
-    .map(b => b.toString(16).padStart(2,"0"))
+    .map(b => b.toString(16).padStart(2, "0"))
     .join("");
 }
 
+/* ===== REGISTER ADMIN ===== */
 async function registerAdmin() {
   const name = full_name.value.trim();
   const user = username.value.trim();
@@ -49,7 +164,7 @@ async function registerAdmin() {
 
   const password_hash = await hashPassword(pass);
 
-  const { data, error } = await db
+  const { error } = await db
     .from("admin_accounts")
     .insert([{
       full_name: name,
@@ -60,17 +175,20 @@ async function registerAdmin() {
   if (error) {
     console.error(error);
     alert("REGISTER FAILED:\n" + error.message);
-  } else {
-    alert("✅ Admin registered successfully");
-    window.location.href = "login.html";
+    return;
   }
+
+  alert("✅ Admin registered successfully");
+  window.location.href = "login.html";
 }
 
-document
-  .getElementById("registerBtn")
-  .addEventListener("click", registerAdmin);
+registerBtn.addEventListener("click", registerAdmin);
+
+/* ENTER KEY SUPPORT */
+document.addEventListener("keydown", e => {
+  if (e.key === "Enter") registerAdmin();
+});
 </script>
 
 </body>
 </html>
-
