--- a/admin-register.html
+++ b/admin-register.html
@@ -5,115 +5,33 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SAFETY DEPOSIT DRAWER | Register Admin</title>
 
-<!-- Supabase -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
-* {
-  box-sizing: border-box;
-  font-family: "Segoe UI", sans-serif;
-}
-
-body {
-  min-height: 100vh;
-  margin: 0;
-  background:
-    linear-gradient(
-      135deg,
-      rgba(15, 32, 39, 0.9),
-      rgba(32, 58, 67, 0.9),
-      rgba(44, 83, 100, 0.9)
-    ),
-    url("https://images.unsplash.com/photo-1526378722484-cc5c51092d5b");
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.container {
-  width: 360px;
-  padding: 35px;
-  border-radius: 18px;
-
-  /* GLASS EFFECT */
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(12px);
-  -webkit-backdrop-filter: blur(12px);
-
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-shadow: 0 10px 40px rgba(0,0,0,0.4);
-
-  color: #fff;
-  text-align: center;
-}
-
-h2 {
-  margin-bottom: 20px;
-  font-weight: 600;
-}
-
-.input-group {
-  text-align: left;
-  margin-bottom: 15px;
-}
-
-label {
-  font-size: 0.85rem;
-  color: rgba(255,255,255,0.8);
-}
-
-input {
-  width: 100%;
-  padding: 11px;
-  margin-top: 5px;
-  border-radius: 10px;
-  background: rgba(255,255,255,0.15);
-  border: 1px solid rgba(255,255,255,0.35);
-  color: #fff;
-  outline: none;
-}
-
-input::placeholder {
-  color: rgba(255,255,255,0.6);
-}
-
-button {
-  width: 100%;
-  padding: 12px;
-  margin-top: 15px;
-  border-radius: 10px;
-  border: none;
-  background: rgba(255,255,255,0.3);
-  color: #fff;
-  font-weight: 600;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-button:hover {
-  background: rgba(255,255,255,0.45);
-}
-
-.link {
-  display: block;
-  margin-top: 15px;
-  font-size: 0.85rem;
-  color: rgba(255,255,255,0.8);
-  text-decoration: none;
-}
-
-.link:hover {
-  text-decoration: underline;
-}
+*{box-sizing:border-box;font-family:"Segoe UI",sans-serif}
+body{min-height:100vh;margin:0;background:linear-gradient(135deg,rgba(15,32,39,.9),rgba(32,58,67,.9),rgba(44,83,100,.9)),url("https://images.unsplash.com/photo-1526378722484-cc5c51092d5b");background-size:cover;background-position:center;display:flex;justify-content:center;align-items:center}
+.container{width:360px;padding:35px;border-radius:18px;background:rgba(255,255,255,.1);backdrop-filter:blur(12px);-webkit-backdrop-filter:blur(12px);border:1px solid rgba(255,255,255,.3);box-shadow:0 10px 40px rgba(0,0,0,.4);color:#fff;text-align:center}
+h2{margin:0 0 8px;font-weight:600}
+.sub{margin:0 0 18px;font-size:.85rem;color:rgba(255,255,255,.75)}
+.input-group{text-align:left;margin-bottom:15px}
+label{font-size:.85rem;color:rgba(255,255,255,.8)}
+input{width:100%;padding:11px;margin-top:6px;border-radius:10px;background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);color:#fff;outline:none}
+input::placeholder{color:rgba(255,255,255,.6)}
+button{width:100%;padding:12px;margin-top:10px;border-radius:10px;border:none;background:rgba(255,255,255,.3);color:#fff;font-weight:600;cursor:pointer;transition:.3s}
+button:hover{background:rgba(255,255,255,.45)}
+.link{display:block;margin-top:15px;font-size:.85rem;color:rgba(255,255,255,.8);text-decoration:none}
+.link:hover{text-decoration:underline}
+.status{margin-top:12px;font-size:.85rem;color:rgba(255,255,255,.8)}
+.bad{color:#ffb3b3}
+.good{color:#b7ffcf}
+small{display:block;margin-top:6px;color:rgba(255,255,255,.65)}
 </style>
 </head>
 
 <body>
-
 <div class="container">
   <h2>Create Admin</h2>
+  <p class="sub">Register a new admin account</p>
 
   <div class="input-group">
     <label>Full Name</label>
@@ -123,6 +41,7 @@ button:hover {
   <div class="input-group">
     <label>Username</label>
     <input id="username" placeholder="Create username">
+    <small>Tip: use unique username</small>
   </div>
 
   <div class="input-group">
@@ -131,28 +50,35 @@ button:hover {
   </div>
 
   <button id="registerBtn">Register</button>
+  <div id="status" class="status"></div>
 
   <a class="link" href="login.html">⬅ Back to Login</a>
 </div>
 
 <script>
-/* ===== SUPABASE CONFIG ===== */
+/* ===== SUPABASE CONFIG (SAME AS LOGIN) ===== */
 const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
-const SUPABASE_KEY = "PASTE_YOUR_ANON_PUBLIC_KEY_HERE";
+const SUPABASE_ANON_KEY = "PASTE_YOUR_ANON_PUBLIC_KEY_HERE"; // <-- paste anon key
 
-const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-/* ===== PASSWORD HASH ===== */
+const statusEl = document.getElementById("status");
+
+/* quick connection test */
+(async () => {
+  const { error } = await db.from("admin_accounts").select("id").limit(1);
+  statusEl.textContent = error ? ("DB: Not connected (" + error.message + ")") : "DB: Connected ✅";
+  statusEl.className = "status " + (error ? "bad" : "good");
+})();
+
 async function hashPassword(password) {
   const enc = new TextEncoder();
   const hash = await crypto.subtle.digest("SHA-256", enc.encode(password));
-  return Array.from(new Uint8Array(hash))
-    .map(b => b.toString(16).padStart(2, "0"))
-    .join("");
+  return Array.from(new Uint8Array(hash)).map(b => b.toString(16).padStart(2, "0")).join("");
 }
 
-/* ===== REGISTER ADMIN ===== */
 async function registerAdmin() {
+  statusEl.textContent = "";
   const name = full_name.value.trim();
   const user = username.value.trim();
   const pass = password.value;
@@ -162,15 +88,29 @@ async function registerAdmin() {
     return;
   }
 
+  // prevent duplicate username (optional but helpful)
+  const { data: existing, error: selErr } = await db
+    .from("admin_accounts")
+    .select("id")
+    .eq("username", user)
+    .maybeSingle();
+
+  if (selErr && selErr.code !== "PGRST116") { // ignore "no rows"
+    alert("CHECK FAILED:\n" + selErr.message);
+    return;
+  }
+  if (existing) {
+    alert("Username already exists. Choose another.");
+    return;
+  }
+
   const password_hash = await hashPassword(pass);
 
-  const { error } = await db
-    .from("admin_accounts")
-    .insert([{
-      full_name: name,
-      username: user,
-      password_hash: password_hash
-    }]);
+  const { error } = await db.from("admin_accounts").insert([{
+    full_name: name,
+    username: user,
+    password_hash
+  }]);
 
   if (error) {
     console.error(error);
@@ -183,12 +123,8 @@ async function registerAdmin() {
 }
 
 registerBtn.addEventListener("click", registerAdmin);
-
-/* ENTER KEY SUPPORT */
-document.addEventListener("keydown", e => {
-  if (e.key === "Enter") registerAdmin();
-});
+document.addEventListener("keydown", e => { if (e.key === "Enter") registerAdmin(); });
 </script>
-
 </body>
 </html>
+
