Fix HTML encoding issues in admin-register.html

--- a/admin-register.html
+++ b/admin-register.html
@@ -57,7 +57,7 @@ small{display:block;margin-top:6px;color:rgba(255,255,255,.65)}
 
 <script>
 /* ===== SUPABASE CONFIG (SAME AS LOGIN) ===== */
-const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
+const SUPABASE_URL = "https://qlnjstqddlpatxdbreme.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFsbmpzdHFkZGxwYXR4ZGJyZW1lIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1MzYyMjYsImV4cCI6MjA4NjExMjIyNn0.JXd9H_Efl_GheVK2lnYU_yhOX09WuoMg6Bhh_nprXeE"; // <-- paste anon key
 
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
@@ -127,4 +127,5 @@ document.addEventListener("keydown", e => { if (e.key === "Enter") registerAdmin
 </script>
 </body>
 </html>
+
 
