--- a/login.html
+++ b/login.html
@@ -149,9 +149,7 @@ button:hover {
 <script>
 /* ===== SUPABASE CONFIG (REAL ONE) ===== */
 const SUPABASE_URL = "https://qlnjstqddlpatxdbreme.supabase.co";
-const SUPABASE_KEY =
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFsbmpzdHFkZGxwYXR4ZGJyZW1lIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1MzYyMjYsImV4cCI6MjA4NjExMjIyNn0.JXd9H_Efl_GheVK2lnYU_yhOX09WuoMg6Bhh_nprXeE";
-
+const SUPABASE_KEY  = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...XeE";
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
 /* ===== PASSWORD HASH ===== */
@@ -204,4 +202,5 @@ document.addEventListener("keydown", e => {
 
 </body>
 </html>
+
 
