--- a/add-user.html
+++ b/add-user.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Add User</title>
 
-<!-- This script loads the external Supabase library first -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -19,181 +18,194 @@
 
   <label>RFID UID</label>
   <select id="rfid_uid">
-    <option value="">Loading RFID...</option>
+    <option value="">Select RFID</option>
   </select>
 
-  <label>Fingerprint</label>
-  <button id="registerFingerprintBtn">
+  <button id="registerFingerprintBtn" disabled>
     Register Fingerprint
   </button>
 
   <p id="fpStatus" style="margin-top:10px;"></p>
 
-  <button id="saveBtn">Save</button>
   <a class="link" href="index.html">⬅ Back</a>
 </div>
+<!-- ERROR MODAL -->
+<div id="errorModal" class="modal hidden">
+  <div class="modal-content">
+    <p>Duplication found. Error occur.</p>
+    <button id="errorOkBtn">OK</button>
+  </div>
+</div>
 
-<!-- 🟢 FIX: Your custom JavaScript block is moved here, ensuring the library is defined before use -->
 <script>
-/* ================= SUPABASE CONFIG ================= */
+/* ================= SUPABASE ================= */
 const SUPABASE_URL = "https://fiiflkakeaorglvqyjxx.supabase.co";
 const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpaWZsa2FrZWFvcmdsdnF5anh4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk1NzMxMTcsImV4cCI6MjA4NTE0OTExN30.jWvGfrYhLtXgTKPlLod_TmdavoIAKudeQZ2AT42pVE8";
-
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-/* ================= GLOBAL STATE ================= */
+/* ================= ELEMENTS ================= */
+const nameInput = document.getElementById("name");
 const rfidSelect = document.getElementById("rfid_uid");
+const registerBtn = document.getElementById("registerFingerprintBtn");
 const fpStatus = document.getElementById("fpStatus");
-let enrolledFingerprintId = null;
-let currentCommandId = null; // Store the ID of the command we are tracking
+const errorModal = document.getElementById("errorModal");
+const errorOkBtn = document.getElementById("errorOkBtn");
 
-/* ================= LOAD RFID (UNCHANGED) ================= */
-async function loadRFIDs() {
 
-  const { data: allRFIDs, error: rfidErr } = await db
-    .from("rfid_cards")
-    .select("uid");
+/* ================= STATE ================= */
+let requestId = null;
 
-  if (rfidErr) {
-    alert("Failed to load RFID cards");
-    console.error(rfidErr);
-    return;
-  }
-
-  const { data: activeUsers, error: userErr } = await db
-    .from("drawer_users")
-    .select("rfid_uid")
-    .eq("is_active", true);
-
-  if (userErr) {
-    alert("Failed to check active users");
-    console.error(userErr);
-    return;
-  }
-
-  const usedRFIDs = new Set(
-    activeUsers.map(u => u.rfid_uid).filter(Boolean)
-  );
-
-  const availableRFIDs = allRFIDs.filter(
-    r => !usedRFIDs.has(r.uid)
-  );
-
-  rfidSelect.innerHTML = "";
-
-  if (availableRFIDs.length === 0) {
-    rfidSelect.innerHTML =
-      `<option value="">No RFID available</option>`;
-    return;
-  }
-
-  availableRFIDs.forEach(r => {
-    rfidSelect.innerHTML +=
-      `<option value="${r.uid}">${r.uid}</option>`;
-  });
+/* ================= ENABLE BUTTON LOGIC ================= */
+function checkInputs() {
+  registerBtn.disabled =
+    !nameInput.value.trim() || !rfidSelect.value;
 }
 
+nameInput.addEventListener("input", checkInputs);
+rfidSelect.addEventListener("change", checkInputs);
+
+/* ================= LOAD RFID ================= */
+async function loadRFIDs() {
+  const { data } = await db.from("rfid_cards").select("uid");
+  rfidSelect.innerHTML = `<option value="">Select RFID</option>`;
+  data.forEach(r => {
+    rfidSelect.innerHTML += `<option value="${r.uid}">${r.uid}</option>`;
+  });
+}
 loadRFIDs();
 
-/* ================= FINGERPRINT RESULT POLLING (MODIFIED) ================= */
-async function waitForFingerprintResult() {
-  fpStatus.innerText = "⌛ Waiting for fingerprint...";
+/* ================= REGISTER FINGERPRINT ================= */
+registerBtn.addEventListener("click", async () => {
 
-  const interval = setInterval(async () => {
-    // Poll the specific command ID we just generated
+  // 🔒 PREVENT DOUBLE INSERT
+  if (requestId) return;
+
+  const name = nameInput.value.trim();
+  const rfid = rfidSelect.value;
+
+  if (!name || !rfid) return;
+
+
+  await db
+    .from("fingerprint_requests")
+    .delete()
+    .eq("status", 2);
+  // lock inputs
+  
+  nameInput.disabled = true;
+  rfidSelect.disabled = true;
+  registerBtn.disabled = true;
+
+  const { data, error } = await db
+    .from("fingerprint_requests")
+    .insert({
+      name,
+      rfid,
+      status: 0,       // pending
+      is_active: true
+    })
+    .select()
+    .single();
+
+  if (error) {
+    alert("Failed to start fingerprint enrollment");
+    console.error(error);
+
+    // unlock if failed
+    nameInput.disabled = false;
+    rfidSelect.disabled = false;
+    registerBtn.disabled = false;
+    return;
+  }
+
+  // 🔥 SAVE REQUEST ID
+  requestId = data.id;
+
+  fpStatus.innerText = "Please scan your finger...";
+  pollStatus();
+});
+
+
+/* ================= POLLING ================= */
+function pollStatus() {
+  const poll = setInterval(async () => {
+    if (!requestId) {
+      clearInterval(poll);
+      return;
+    }
+
     const { data, error } = await db
-      .from("device_commands")
+      .from("fingerprint_requests")
       .select("*")
-      .eq("id", currentCommandId)
-      .eq("status", "DONE")
+      .eq("id", requestId)
       .single();
 
-    // If status isn't DONE yet, return and poll again
     if (error || !data) return;
 
-    // Check if the hardware returned a fingerprint ID correctly
-    if (data.fingerprint_id !== null) {
-      enrolledFingerprintId = data.fingerprint_id;
-      fpStatus.innerText = "✅ Fingerprint registered (ID: " + enrolledFingerprintId + ")";
-      clearInterval(interval); // Stop polling once we have the ID
-    } else {
-      // Handle error case where hardware failed to enroll but marked status DONE
-      fpStatus.innerText = "❌ Enrollment failed on device. Try again.";
-      clearInterval(interval);
+    // STATUS 0 → waiting first scan
+    if (data.status === 0) {
+      fpStatus.innerText = "Please scan your finger...";
+      return;
+    }
+
+    // STATUS 1 → waiting second scan
+    if (data.status === 1) {
+      fpStatus.innerText = "Please scan finger again...";
+      return;
+    }
+
+    // 🔴 STATUS 2 → DUPLICATE / ERROR (FINAL)
+    if (data.status === 2) {
+      clearInterval(poll);
+
+      // 🔥 END ENROLLMENT SESSION
+      requestId = null;
+
+      errorModal.classList.remove("hidden");
+
+      errorOkBtn.onclick = async () => {
+        await db
+          .from("fingerprint_requests")
+          .update({
+            is_active: false,
+            deleted_at: new Date().toISOString()
+          })
+          .eq("id", data.id);
+
+        errorModal.classList.add("hidden");
+
+        // Reset UI
+        nameInput.disabled = false;
+        rfidSelect.disabled = false;
+        registerBtn.disabled = false;
+
+        fpStatus.innerText = "Click Register Fingerprint to try again";
+      };
+
+      return;
+    }
+
+    // 🟢 STATUS 3 → SUCCESS (FINAL)
+    if (data.status === 3) {
+      clearInterval(poll);
+
+      // 🔥 END ENROLLMENT SESSION
+      requestId = null;
+
+      fpStatus.innerText =
+        "Done registering. Going back to main menu...";
+
+      setTimeout(() => {
+        window.location.href = "index.html";
+      }, 1500);
+
+      return;
     }
 
   }, 2000);
 }
 
-/* ================= REGISTER FINGERPRINT (MODIFIED) ================= */
-document
-  .getElementById("registerFingerprintBtn")
-  .addEventListener("click", async () => {
-
-    fpStatus.innerText = "";
-
-    const res = await fetch(
-      // 🟢 FIX: Use the full Edge Function URL, not the root domain
-      "https://fiiflkakeaorglvqyjxx.supabase.co/functions/v1/start-fingerprint-enroll",
-      {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          // "Authorization": "Bearer " + SUPABASE_KEY // Removed header as function is public
-        },
-        body: JSON.stringify({
-          device_id: "drawer_01"
-        })
-      }
-    );
-
-    const data = await res.json();
-    
-    if (data.status === "ENROLL_STARTED") {
-      currentCommandId = data.command_id; // Capture the specific command ID
-      alert("🟢 Please place finger on the device");
-      waitForFingerprintResult();
-    } else {
-      alert("❌ Failed to start enrollment");
-      console.log(data);
-    }
-});
-
-/* ================= SAVE USER ================= */
-document.getElementById("saveBtn").addEventListener("click", async () => {
-
-  const name = document.getElementById("name").value.trim();
-  const rfid_uid = rfidSelect.value;
-
-  // This check ensures 'enrolledFingerprintId' is captured before saving
-  if (!name || !rfid_uid || enrolledFingerprintId === null) {
-    alert("Please complete all fields and register fingerprint");
-    return;
-  }
-
-  // Final insertion into the 'drawer_users' table happens here!
-  const { error } = await db
-    .from("drawer_users")
-    .insert([{
-      name,
-      rfid_uid,
-      fingerprint_id: enrolledFingerprintId,
-      is_active: true
-    }]);
-
-  if (error) {
-    alert("Failed to add user");
-    console.error(error);
-    return;
-  }
-
-  alert("✅ User added successfully");
-  window.location.href = "index.html";
-});
 </script>
 
 </body>
 </html>
-
-
-
